plugins {
	id 'org.springframework.boot' version '2.3.1.RELEASE'
	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
	id 'java'
}

group = 'ch.softridge.cardmarket'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
    //Spring-Boot
	implementation 'org.springframework.boot:spring-boot-starter'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-devtools:2.3.1.RELEASE'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"

    //implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'



    // Database
    implementation 'org.postgresql:postgresql'
    implementation 'com.h2database:h2'
    // Dev Tools
    compileOnly 'org.projectlombok:lombok:1.18.14'
    annotationProcessor 'org.projectlombok:lombok:1.18.14'
    implementation "org.mapstruct:mapstruct:1.4.1.Final"
    annotationProcessor "org.mapstruct:mapstruct-processor:1.4.1.Final"

    //Formats
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.12.0-rc1'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.12.0-rc1'
    compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.12.0-rc1'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv', version: '2.11.1'
    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.12.0-rc1'
    compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
    compile group: 'org.javatuples', name: 'javatuples', version: '1.2'
    compile group: 'com.neovisionaries', name: 'nv-i18n', version: '1.24'

    //documentation
    compile group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
    compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'


    //testing
    testCompileOnly 'org.projectlombok:lombok:1.18.14'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.14'
    testAnnotationProcessor "org.mapstruct:mapstruct-processor:1.4.1.Final"
    testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'

    testCompile group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'


    //Webjars
    implementation 'org.webjars:bootstrap:4.5.0'
    implementation 'org.webjars:font-awesome:5.13.0'

	testImplementation('org.springframework.boot:spring-boot-starter-test') {
		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
	}
}

test {
	useJUnitPlatform()
}
